--- a/Desafios/d012/estilo/style.css
+++ b/Desafios/d012/estilo/style.css
@@ -10,7 +10,8 @@
 
 body {
     margin: 0px;
-    min-height: 100vw;
+    padding: 0px;
+    min-height: 100vh;
 }
 header {
     background-color: black;
@@ -22,7 +23,8 @@ header h1 {
     color: white;
     font-family: var(--fonte-header);
     font-weight: bold;
-    font-size: 10vw;
+    font-variant: small-caps;
+    font-size: 10vh;
     margin: 0px;
     padding-top: 50px;
 }
@@ -42,10 +44,16 @@ header a:hover {
     text-decoration: underline;
 }
 
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
 .texto {
     font-family: var(--fonte-texto);
-    font-size: 3.5vw;
-    padding: 20px;
+    font-size: 3.5vh;
 }
 .imagem {
     background-color: black;
@@ -53,10 +61,10 @@ header a:hover {
     background-attachment: fixed;
     font-family: var(--fonte-texto);
     font-size: 3.5vw;
-    padding: 20px;
 }
 
 .imagem p {
+    width: 400px;
     background-color: rgba(0, 0, 0, 0.384);
     color: white;
 }
