--- a/Desafios/d012/estilo/style.css
+++ b/Desafios/d012/estilo/style.css
@@ -54,6 +54,7 @@ section {
 .texto {
     font-family: var(--fonte-texto);
     font-size: 3.5vh;
+    padding-bottom: 2em;
 }
 .imagem {
     background-color: black;
@@ -61,6 +62,7 @@ section {
     background-attachment: fixed;
     font-family: var(--fonte-texto);
     font-size: 3.5vw;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.493);
 }
 
 .imagem p {
@@ -68,6 +70,7 @@ section {
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.384);
     color: white;
+    text-shadow: 1px 1px 0px black;
 }
 #img01 {
     background-image: url('../imagens/background001.jpg');
